modificaciones y ajustes